# test2

./: .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  middleware.ts  package.json  pnpm-lock.yaml  render.yaml  requirements.txt  tailwind.config.ts  tsconfig.json
app/: globals.css  jobs.py  layout.tsx  main.py  page.tsx
components/: kpi-card.tsx  mention-list.tsx  section-heading.tsx  theme-toggle.tsx
config/: brands.ts
data/: sample_mentions.json
lib/: env.ts  format.ts  rollup.ts  schema.ts  time.ts
prisma/: schema.prisma  seed.ts
scripts/: brand-match.ts  brivo-cron.ts  cron-sync-once.ts  enrich.ts  (+4 more)
wbr-deck-agent/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
wbr-deck-agent/backend/tests/: test_smoke.py
wbr-deck-agent/backend/wbr_deck_agent/: cli.py
wbr-deck-agent/backend/wbr_deck_agent/api/: __init__.py  main.py
wbr-deck-agent/backend/wbr_deck_agent/core/: __init__.py  config.py  db.py  job_queue.py  paths.py
wbr-deck-agent/backend/wbr_deck_agent/pipeline/: __init__.py  build.py  extract.py  images.py  pdf_render.py  schemas.py  synthesize.py
wbr-deck-agent/backend/wbr_deck_agent/render/: __init__.py  deck.py
wbr-deck-agent/backend/wbr_deck_agent/util/: __init__.py  redact.py  zip.py
wbr-deck-agent/frontend/: index.html  package-lock.json  package.json  postcss.config.cjs  vite.config.ts
wbr-deck-agent/frontend/src/: App.tsx  styles.css
wbr-deck-agent/scripts/: dev.sh  ensure_node.sh  generate_sample_inputs.py  node.sh  npm.sh
wbr-deck-agent/tests/: test_anthropic_image_preprocess.py
(+139 files in other folders)
